fixed navbar visibility

--- a/css/style.css
+++ b/css/style.css
@@ -71,10 +71,11 @@ a {
 
 
 .navbar {
-    background-color: transparent;
+    background-color: rgba(250, 250, 250, 0.9);
     font-family: 'Futura Oblique', helvetica;
     letter-spacing: 1px;
     text-align: center;
+    opacity:50%;
 }
 
 .navbar text {
@@ -96,6 +97,12 @@ a {
   float: none;
   vertical-align: top;
 }
+
+ .navbar.navbar-dark .breadcrumb a, .navbar.navbar-dark .navbar-nav .nav-item a {
+    color: black;
+    transition: .35s;
+}
+
 
 .logo {
     width:3%;
@@ -120,6 +127,7 @@ a {
   -moz-transform: scale(1.3);
   -webkit-transform: scale(1.3);
   transform: scale(1.3);
+  transition:.35s;
 }
 
 .content {
@@ -795,6 +803,7 @@ footer.page-footer .call-to-action ul li {
     -moz-transform: scale(1.1);
     -webkit-transform: scale(1.1);
     transform: scale(1.1);
+    transition:.35s;
 }
 
 
@@ -879,10 +888,6 @@ transform: translate(-50%);
     display: block;
 }
 
-/* Change color of dropdown links on hover */
-.dropdown-content-blue a:hover, .dropdown-content-blue a:hover {
-    background-color: #f1f1f1;
-}
 
 /* Show the dropdown menu on hover */
 .dropdown:hover .dropdown-content-blue, .dropdown:hover .dropdown-content-red {
